# PPHoareSort

./: .travis.yml  CMakeLists.txt  README.md  genTests.bat  main.cpp  sol.cpp
src/: 1.txt  2.txt  CMakeLists.txt  before_code.cpp  genTests50.bat  numbers.in  numbers.out  sol.cpp
src/checker/: CMakeLists.txt  checker.cpp  classResult.cpp
src/checker_/: README.md  checker.cpp
src/generator/: CMakeLists.txt  generator.cpp  genfunc.cpp
src/generator_/: README.md  generator.cpp
src/solver_/: README.md
src/typerANDviewer/: CMakeLists.txt  README.md  typer.cpp  viewer.cpp
tests/: 1  1.ans  10  10.ans  11  11.ans  12  12.ans  13  13.ans  16.ans  2  2.ans  3  3.ans  4  4.ans  5  5.ans  6  6.ans  7  7.ans  8  8.ans  9  9.ans
